--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,80 @@
-table
-{
-    color: blue;
+body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 20px;
+   
+}
+header{
+    background-color: #93329e;
+}
+h2{
+    text-align: center;
+    background-color: #440a67;
+    color: #ffe3fe;
+   font: bold;
+    font-size: 30px;
+    padding: 30px;
+}
+#navBar{
+    text-align: center;
+    padding: 30px;
+}
+#navBar li {
+    display: inline;
+    padding: 30px;
+   
+    color: #ffe3fe;
+}
+
+#locations{
+background-color:  #440a67;
+width: 20%;
+color: #ffe3fe;
+text-align: left;
+padding-right: 100px;
+    margin-right: 30px;
+
+}
+#locations li{
+    margin: 20px;
+    padding: 20px;
+}
+#informations{
+    display: inline-flex;
+}
+#placeInformations{
+    text-align: center;
+}
+h4{
+    padding-left: 30px;
+    margin-left: 30px;
+    padding-top: 30px;
+    font-size: 20px;
+    font: bold;
+
+}
+h3{
+    font: bold;
+    padding-right: 30px;
+    margin: 30px;
+    
+    font-size: 30px; 
+    text-align: center;
+ 
+}
+#firstImage{
+  
+}
+
+footer{
+    background-color: #b4aee8;
+    padding: 30px;
+}
+a{
+    color:  #000;
+}
+.clear{
+    clear: both;
+}
+#prgraph{
+    text-align: left;
 }
