--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 20px;
+    text-align: center;
    
 }
 header{
